feat: add l10n keys for card color attribute and gradient settings
Add 16 new localization keys across all 10 ARB files (en, de, es, fr,
it, pt, nl, hu, ar, he) for the card color attribute selector dropdown
and gradient preset picker. Technical terms (OTU, ppO2) remain
untranslated across all locales.

--- a/lib/l10n/arb/app_ar.arb
+++ b/lib/l10n/arb/app_ar.arb
@@ -2841,11 +2841,27 @@
   "settings_about_openSourceLicenses": "تراخيص المصادر المفتوحة",
   "settings_about_reportIssue": "الإبلاغ عن مشكلة",
   "settings_about_reportIssue_snackbar": "قم بزيارة github.com/submersion/submersion",
-  "settings_about_version": "الإصدار 0.1.0",
+  "settings_about_version": "الإصدار {version} ({buildNumber})",
   "settings_appBar_title": "الإعدادات",
   "settings_appearance_appLanguage": "لغة التطبيق",
   "settings_appearance_depthColoredCards": "بطاقات ملونة حسب العمق",
   "settings_appearance_depthColoredCards_subtitle": "عرض بطاقات الغوص بخلفيات ملونة بألوان المحيط حسب العمق",
+  "settings_appearance_cardColorAttribute": "تلوين البطاقات حسب",
+  "settings_appearance_cardColorAttribute_subtitle": "اختر السمة التي تحدد لون خلفية البطاقة",
+  "settings_appearance_cardColorAttribute_none": "لا شيء",
+  "settings_appearance_cardColorAttribute_depth": "العمق",
+  "settings_appearance_cardColorAttribute_duration": "المدة",
+  "settings_appearance_cardColorAttribute_temperature": "درجة الحرارة",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "تدرج الألوان",
+  "settings_appearance_colorGradient_subtitle": "اختر نطاق الألوان لخلفيات البطاقات",
+  "settings_appearance_colorGradient_ocean": "محيط",
+  "settings_appearance_colorGradient_thermal": "حراري",
+  "settings_appearance_colorGradient_sunset": "غروب",
+  "settings_appearance_colorGradient_forest": "غابة",
+  "settings_appearance_colorGradient_monochrome": "أحادي اللون",
+  "settings_appearance_colorGradient_custom": "مخصص",
   "settings_appearance_gasSwitchMarkers": "علامات تبديل الغاز",
   "settings_appearance_gasSwitchMarkers_subtitle": "عرض علامات لتبديل الغازات",
   "settings_appearance_header_diveLog": "سجل الغوص",
