--- a/lib/l10n/arb/app_de.arb
+++ b/lib/l10n/arb/app_de.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "Open-Source-Lizenzen",
   "settings_about_reportIssue": "Problem melden",
   "settings_about_reportIssue_snackbar": "Besuchen Sie github.com/submersion/submersion",
-  "settings_about_version": "Version 0.1.0",
+  "settings_about_version": "Version {version} ({buildNumber})",
   "settings_appBar_title": "Einstellungen",
   "settings_appearance_appLanguage": "App-Sprache",
   "settings_appearance_depthColoredCards": "Tiefengefaerbte Tauchkarten",
   "settings_appearance_depthColoredCards_subtitle": "Tauchkarten mit ozeanfarbenen Hintergruenden basierend auf der Tiefe anzeigen",
+  "settings_appearance_cardColorAttribute": "Karten faerben nach",
+  "settings_appearance_cardColorAttribute_subtitle": "Waehlen Sie, welches Attribut die Hintergrundfarbe der Karten bestimmt",
+  "settings_appearance_cardColorAttribute_none": "Keine",
+  "settings_appearance_cardColorAttribute_depth": "Tiefe",
+  "settings_appearance_cardColorAttribute_duration": "Dauer",
+  "settings_appearance_cardColorAttribute_temperature": "Temperatur",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max. ppO2",
+  "settings_appearance_colorGradient": "Farbverlauf",
+  "settings_appearance_colorGradient_subtitle": "Waehlen Sie den Farbbereich fuer Kartenhintergruende",
+  "settings_appearance_colorGradient_ocean": "Ozean",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Sonnenuntergang",
+  "settings_appearance_colorGradient_forest": "Wald",
+  "settings_appearance_colorGradient_monochrome": "Monochrom",
+  "settings_appearance_colorGradient_custom": "Benutzerdefiniert",
   "settings_appearance_gasSwitchMarkers": "Gaswechsel-Markierungen",
   "settings_appearance_gasSwitchMarkers_subtitle": "Markierungen fuer Gaswechsel anzeigen",
   "settings_appearance_header_diveLog": "Tauchlogbuch",
