--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "Licencias de codigo abierto",
   "settings_about_reportIssue": "Reportar un problema",
   "settings_about_reportIssue_snackbar": "Visita github.com/submersion/submersion",
-  "settings_about_version": "Version 0.1.0",
+  "settings_about_version": "Version {version} ({buildNumber})",
   "settings_appBar_title": "Ajustes",
   "settings_appearance_appLanguage": "Idioma de la aplicacion",
   "settings_appearance_depthColoredCards": "Tarjetas coloreadas por profundidad",
   "settings_appearance_depthColoredCards_subtitle": "Mostrar tarjetas de inmersion con fondos de color oceanico segun la profundidad",
+  "settings_appearance_cardColorAttribute": "Colorear tarjetas por",
+  "settings_appearance_cardColorAttribute_subtitle": "Elegir que atributo determina el color de fondo de las tarjetas",
+  "settings_appearance_cardColorAttribute_none": "Ninguno",
+  "settings_appearance_cardColorAttribute_depth": "Profundidad",
+  "settings_appearance_cardColorAttribute_duration": "Duracion",
+  "settings_appearance_cardColorAttribute_temperature": "Temperatura",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Gradiente de color",
+  "settings_appearance_colorGradient_subtitle": "Elegir el rango de colores para los fondos de las tarjetas",
+  "settings_appearance_colorGradient_ocean": "Oceano",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Atardecer",
+  "settings_appearance_colorGradient_forest": "Bosque",
+  "settings_appearance_colorGradient_monochrome": "Monocromo",
+  "settings_appearance_colorGradient_custom": "Personalizado",
   "settings_appearance_gasSwitchMarkers": "Marcadores de cambio de gas",
   "settings_appearance_gasSwitchMarkers_subtitle": "Mostrar marcadores para cambios de gas",
   "settings_appearance_header_diveLog": "Registro de buceo",
