--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -2841,11 +2841,27 @@
   "settings_about_openSourceLicenses": "Licences open source",
   "settings_about_reportIssue": "Signaler un probleme",
   "settings_about_reportIssue_snackbar": "Rendez-vous sur github.com/submersion/submersion",
-  "settings_about_version": "Version 0.1.0",
+  "settings_about_version": "Version {version} ({buildNumber})",
   "settings_appBar_title": "Reglages",
   "settings_appearance_appLanguage": "Langue de l'application",
   "settings_appearance_depthColoredCards": "Cartes de plongee colorees par profondeur",
   "settings_appearance_depthColoredCards_subtitle": "Afficher les cartes de plongee avec des fonds colores selon la profondeur",
+  "settings_appearance_cardColorAttribute": "Colorer les cartes par",
+  "settings_appearance_cardColorAttribute_subtitle": "Choisir quel attribut determine la couleur de fond des cartes",
+  "settings_appearance_cardColorAttribute_none": "Aucun",
+  "settings_appearance_cardColorAttribute_depth": "Profondeur",
+  "settings_appearance_cardColorAttribute_duration": "Duree",
+  "settings_appearance_cardColorAttribute_temperature": "Temperature",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Degrade de couleur",
+  "settings_appearance_colorGradient_subtitle": "Choisir la gamme de couleurs pour les fonds de cartes",
+  "settings_appearance_colorGradient_ocean": "Ocean",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Coucher de soleil",
+  "settings_appearance_colorGradient_forest": "Foret",
+  "settings_appearance_colorGradient_monochrome": "Monochrome",
+  "settings_appearance_colorGradient_custom": "Personnalise",
   "settings_appearance_gasSwitchMarkers": "Marqueurs de changement de gaz",
   "settings_appearance_gasSwitchMarkers_subtitle": "Afficher les marqueurs de changement de gaz",
   "settings_appearance_header_diveLog": "Carnet de plongee",
