--- a/lib/l10n/arb/app_he.arb
+++ b/lib/l10n/arb/app_he.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "רישיונות קוד פתוח",
   "settings_about_reportIssue": "דווח על בעיה",
   "settings_about_reportIssue_snackbar": "בקר ב-github.com/submersion/submersion",
-  "settings_about_version": "גרסה 0.1.0",
+  "settings_about_version": "גרסה {version} ({buildNumber})",
   "settings_appBar_title": "הגדרות",
   "settings_appearance_appLanguage": "שפת האפליקציה",
   "settings_appearance_depthColoredCards": "כרטיסי צלילה צבועים לפי עומק",
   "settings_appearance_depthColoredCards_subtitle": "הצג כרטיסי צלילה עם רקעים בצבעי אוקיינוס לפי עומק",
+  "settings_appearance_cardColorAttribute": "צבע כרטיסים לפי",
+  "settings_appearance_cardColorAttribute_subtitle": "בחר איזה מאפיין קובע את צבע הרקע של הכרטיסים",
+  "settings_appearance_cardColorAttribute_none": "ללא",
+  "settings_appearance_cardColorAttribute_depth": "עומק",
+  "settings_appearance_cardColorAttribute_duration": "משך",
+  "settings_appearance_cardColorAttribute_temperature": "טמפרטורה",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "מעבר צבעים",
+  "settings_appearance_colorGradient_subtitle": "בחר את טווח הצבעים לרקעי הכרטיסים",
+  "settings_appearance_colorGradient_ocean": "אוקיינוס",
+  "settings_appearance_colorGradient_thermal": "תרמי",
+  "settings_appearance_colorGradient_sunset": "שקיעה",
+  "settings_appearance_colorGradient_forest": "יער",
+  "settings_appearance_colorGradient_monochrome": "מונוכרום",
+  "settings_appearance_colorGradient_custom": "מותאם אישית",
   "settings_appearance_gasSwitchMarkers": "סמני החלפת גז",
   "settings_appearance_gasSwitchMarkers_subtitle": "הצג סמנים להחלפות גז",
   "settings_appearance_header_diveLog": "יומן צלילות",
