--- a/lib/l10n/arb/app_hu.arb
+++ b/lib/l10n/arb/app_hu.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "Nyilt forrasu licencek",
   "settings_about_reportIssue": "Hiba bejelentese",
   "settings_about_reportIssue_snackbar": "Latogasson el: github.com/submersion/submersion",
-  "settings_about_version": "Verzio 0.1.0",
+  "settings_about_version": "Verzio {version} ({buildNumber})",
   "settings_appBar_title": "Beallitasok",
   "settings_appearance_appLanguage": "Alkalmazas nyelve",
   "settings_appearance_depthColoredCards": "Melyseg szerint szinezett merülesi kartyak",
   "settings_appearance_depthColoredCards_subtitle": "Merülesi kartyak megjelenites ocean-szinu hatterrel a melyseg alapjan",
+  "settings_appearance_cardColorAttribute": "Kartyak szinezese",
+  "settings_appearance_cardColorAttribute_subtitle": "Valassza ki, melyik jellemzo hatarozza meg a kartya hatterszinet",
+  "settings_appearance_cardColorAttribute_none": "Nincs",
+  "settings_appearance_cardColorAttribute_depth": "Melyseg",
+  "settings_appearance_cardColorAttribute_duration": "Idotartam",
+  "settings_appearance_cardColorAttribute_temperature": "Homerseklet",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Szinatlenet",
+  "settings_appearance_colorGradient_subtitle": "Valassza ki a szintartomanyt a kartya hatterekhez",
+  "settings_appearance_colorGradient_ocean": "Ocean",
+  "settings_appearance_colorGradient_thermal": "Termikus",
+  "settings_appearance_colorGradient_sunset": "Naplemente",
+  "settings_appearance_colorGradient_forest": "Erdo",
+  "settings_appearance_colorGradient_monochrome": "Monokrom",
+  "settings_appearance_colorGradient_custom": "Egyeni",
   "settings_appearance_gasSwitchMarkers": "Gazvaltas jelolok",
   "settings_appearance_gasSwitchMarkers_subtitle": "Gazvaltas jelolok megjelenites",
   "settings_appearance_header_diveLog": "Merülesi naplo",
