--- a/lib/l10n/arb/app_it.arb
+++ b/lib/l10n/arb/app_it.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "Licenze open source",
   "settings_about_reportIssue": "Segnala un problema",
   "settings_about_reportIssue_snackbar": "Visita github.com/submersion/submersion",
-  "settings_about_version": "Versione 0.1.0",
+  "settings_about_version": "Versione {version} ({buildNumber})",
   "settings_appBar_title": "Impostazioni",
   "settings_appearance_appLanguage": "Lingua dell'app",
   "settings_appearance_depthColoredCards": "Schede immersione colorate per profondità",
   "settings_appearance_depthColoredCards_subtitle": "Mostra le schede immersione con sfondi colorati come l'oceano in base alla profondità",
+  "settings_appearance_cardColorAttribute": "Colora schede per",
+  "settings_appearance_cardColorAttribute_subtitle": "Scegli quale attributo determina il colore di sfondo delle schede",
+  "settings_appearance_cardColorAttribute_none": "Nessuno",
+  "settings_appearance_cardColorAttribute_depth": "Profondità",
+  "settings_appearance_cardColorAttribute_duration": "Durata",
+  "settings_appearance_cardColorAttribute_temperature": "Temperatura",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Gradiente di colore",
+  "settings_appearance_colorGradient_subtitle": "Scegli la gamma di colori per gli sfondi delle schede",
+  "settings_appearance_colorGradient_ocean": "Oceano",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Tramonto",
+  "settings_appearance_colorGradient_forest": "Foresta",
+  "settings_appearance_colorGradient_monochrome": "Monocromo",
+  "settings_appearance_colorGradient_custom": "Personalizzato",
   "settings_appearance_gasSwitchMarkers": "Marcatori cambio gas",
   "settings_appearance_gasSwitchMarkers_subtitle": "Mostra i marcatori per i cambi gas",
   "settings_appearance_header_diveLog": "Registro immersioni",
