--- a/lib/l10n/arb/app_nl.arb
+++ b/lib/l10n/arb/app_nl.arb
@@ -2841,11 +2841,27 @@
   "settings_about_openSourceLicenses": "Open source-licenties",
   "settings_about_reportIssue": "Probleem melden",
   "settings_about_reportIssue_snackbar": "Ga naar github.com/submersion/submersion",
-  "settings_about_version": "Versie 0.1.0",
+  "settings_about_version": "Versie {version} ({buildNumber})",
   "settings_appBar_title": "Instellingen",
   "settings_appearance_appLanguage": "App-taal",
   "settings_appearance_depthColoredCards": "Dieptegekleurde duikkaarten",
   "settings_appearance_depthColoredCards_subtitle": "Toon duikkaarten met oceaangekleurde achtergronden op basis van diepte",
+  "settings_appearance_cardColorAttribute": "Kaarten kleuren op",
+  "settings_appearance_cardColorAttribute_subtitle": "Kies welk attribuut de achtergrondkleur van kaarten bepaalt",
+  "settings_appearance_cardColorAttribute_none": "Geen",
+  "settings_appearance_cardColorAttribute_depth": "Diepte",
+  "settings_appearance_cardColorAttribute_duration": "Duur",
+  "settings_appearance_cardColorAttribute_temperature": "Temperatuur",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Kleurverloop",
+  "settings_appearance_colorGradient_subtitle": "Kies het kleurbereik voor kaartachtergronden",
+  "settings_appearance_colorGradient_ocean": "Oceaan",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Zonsondergang",
+  "settings_appearance_colorGradient_forest": "Bos",
+  "settings_appearance_colorGradient_monochrome": "Monochroom",
+  "settings_appearance_colorGradient_custom": "Aangepast",
   "settings_appearance_gasSwitchMarkers": "Gaswisselmarkeringen",
   "settings_appearance_gasSwitchMarkers_subtitle": "Toon markeringen voor gaswisselingen",
   "settings_appearance_header_diveLog": "Duiklogboek",
