--- a/lib/l10n/arb/app_pt.arb
+++ b/lib/l10n/arb/app_pt.arb
@@ -2569,11 +2569,27 @@
   "settings_about_openSourceLicenses": "Licencas de Codigo Aberto",
   "settings_about_reportIssue": "Relatar um Problema",
   "settings_about_reportIssue_snackbar": "Acesse github.com/submersion/submersion",
-  "settings_about_version": "Versao 0.1.0",
+  "settings_about_version": "Versao {version} ({buildNumber})",
   "settings_appBar_title": "Configuracoes",
   "settings_appearance_appLanguage": "Idioma do Aplicativo",
   "settings_appearance_depthColoredCards": "Cartoes coloridos por profundidade",
   "settings_appearance_depthColoredCards_subtitle": "Mostrar cartoes de mergulho com fundos em cores oceanicas baseados na profundidade",
+  "settings_appearance_cardColorAttribute": "Colorir cartoes por",
+  "settings_appearance_cardColorAttribute_subtitle": "Escolher qual atributo determina a cor de fundo dos cartoes",
+  "settings_appearance_cardColorAttribute_none": "Nenhum",
+  "settings_appearance_cardColorAttribute_depth": "Profundidade",
+  "settings_appearance_cardColorAttribute_duration": "Duracao",
+  "settings_appearance_cardColorAttribute_temperature": "Temperatura",
+  "settings_appearance_cardColorAttribute_otu": "OTU",
+  "settings_appearance_cardColorAttribute_maxPpO2": "Max ppO2",
+  "settings_appearance_colorGradient": "Gradiente de cor",
+  "settings_appearance_colorGradient_subtitle": "Escolher a faixa de cores para os fundos dos cartoes",
+  "settings_appearance_colorGradient_ocean": "Oceano",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_colorGradient_sunset": "Por do sol",
+  "settings_appearance_colorGradient_forest": "Floresta",
+  "settings_appearance_colorGradient_monochrome": "Monocromatico",
+  "settings_appearance_colorGradient_custom": "Personalizado",
   "settings_appearance_gasSwitchMarkers": "Marcadores de troca de gas",
   "settings_appearance_gasSwitchMarkers_subtitle": "Mostrar marcadores para trocas de gas",
   "settings_appearance_header_diveLog": "Registro de Mergulho",
