Navigation fixes. CI/CD windows and linux fixes.

--- a/lib/l10n/arb/app_ar.arb
+++ b/lib/l10n/arb/app_ar.arb
@@ -692,6 +692,7 @@
   "diveComputer_discovery_unknownDeviceDescription": "هذا الجهاز غير موجود في مكتبتنا. سنحاول الاتصال، لكن التنزيل قد لا يعمل.",
   "diveComputer_downloadStep_andMoreDives": "... و{count} أخرى",
   "diveComputer_downloadStep_cancel": "إلغاء",
+  "diveComputer_downloadStep_cancelled": "تم إلغاء التنزيل",
   "diveComputer_downloadStep_depthMeters": "{depth}m",
   "diveComputer_downloadStep_downloadFailed": "فشل التنزيل",
   "diveComputer_downloadStep_downloadedDives": "الغطسات المنزّلة",
@@ -967,6 +968,7 @@
   "diveLog_detail_label_entryMethod": "طريقة الدخول",
   "diveLog_detail_label_exit": "الخروج:",
   "diveLog_detail_label_exitMethod": "طريقة الخروج",
+  "diveLog_detail_label_firmwareVersion": "إصدار البرنامج الثابت",
   "diveLog_detail_label_gradientFactors": "عوامل التدرج",
   "diveLog_detail_label_height": "الارتفاع",
   "diveLog_detail_label_highTide": "المد العالي",
@@ -974,6 +976,7 @@
   "diveLog_detail_label_ppO2AtPoint": "ppO₂ عند النقطة المحددة:",
   "diveLog_detail_label_rateOfChange": "معدل التغير",
   "diveLog_detail_label_sacRate": "معدل SAC",
+  "diveLog_detail_label_serialNumber": "الرقم التسلسلي",
   "diveLog_detail_label_state": "الحالة",
   "diveLog_detail_label_surfaceInterval": "فترة السطح",
   "diveLog_detail_label_surfacePressure": "ضغط السطح",
@@ -1233,8 +1236,11 @@
   "diveLog_legend_label_temp": "الحرارة",
   "diveLog_legend_label_tts": "TTS",
   "diveLog_listPage_appBar_diveMap": "خريطة الغوص",
+  "diveLog_listPage_bottomSheet_importFromComputer": "استيراد من حاسوب الغوص",
+  "diveLog_listPage_bottomSheet_logManually": "تسجيل غوصة يدويا",
   "diveLog_listPage_compactTitle": "الغوصات",
   "diveLog_listPage_errorLoading": "خطأ: {error}",
+  "diveLog_listPage_fab_addDive": "اضافة غوصة",
   "diveLog_listPage_fab_logDive": "تسجيل غوصة",
   "diveLog_listPage_menuAdvancedSearch": "بحث متقدم",
   "diveLog_listPage_menuDiveNumbering": "ترقيم الغوصات",
@@ -2844,22 +2850,22 @@
   "settings_about_version": "الإصدار {version} ({buildNumber})",
   "settings_appBar_title": "الإعدادات",
   "settings_appearance_appLanguage": "لغة التطبيق",
-  "settings_appearance_depthColoredCards": "بطاقات ملونة حسب العمق",
-  "settings_appearance_depthColoredCards_subtitle": "عرض بطاقات الغوص بخلفيات ملونة بألوان المحيط حسب العمق",
   "settings_appearance_cardColorAttribute": "تلوين البطاقات حسب",
-  "settings_appearance_cardColorAttribute_subtitle": "اختر السمة التي تحدد لون خلفية البطاقة",
-  "settings_appearance_cardColorAttribute_none": "لا شيء",
   "settings_appearance_cardColorAttribute_depth": "العمق",
   "settings_appearance_cardColorAttribute_duration": "المدة",
+  "settings_appearance_cardColorAttribute_none": "لا شيء",
+  "settings_appearance_cardColorAttribute_subtitle": "اختر السمة التي تحدد لون خلفية البطاقة",
   "settings_appearance_cardColorAttribute_temperature": "درجة الحرارة",
   "settings_appearance_colorGradient": "تدرج الألوان",
-  "settings_appearance_colorGradient_subtitle": "اختر نطاق الألوان لخلفيات البطاقات",
-  "settings_appearance_colorGradient_ocean": "محيط",
-  "settings_appearance_colorGradient_thermal": "حراري",
-  "settings_appearance_colorGradient_sunset": "غروب",
+  "settings_appearance_colorGradient_custom": "مخصص",
   "settings_appearance_colorGradient_forest": "غابة",
   "settings_appearance_colorGradient_monochrome": "أحادي اللون",
-  "settings_appearance_colorGradient_custom": "مخصص",
+  "settings_appearance_colorGradient_ocean": "محيط",
+  "settings_appearance_colorGradient_subtitle": "اختر نطاق الألوان لخلفيات البطاقات",
+  "settings_appearance_colorGradient_sunset": "غروب",
+  "settings_appearance_colorGradient_thermal": "حراري",
+  "settings_appearance_depthColoredCards": "بطاقات ملونة حسب العمق",
+  "settings_appearance_depthColoredCards_subtitle": "عرض بطاقات الغوص بخلفيات ملونة بألوان المحيط حسب العمق",
   "settings_appearance_gasSwitchMarkers": "علامات تبديل الغاز",
   "settings_appearance_gasSwitchMarkers_subtitle": "عرض علامات لتبديل الغازات",
   "settings_appearance_header_diveLog": "سجل الغوص",
