--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1847,6 +1847,9 @@
   "diveLog_listPage_appBar_diveMap": "Dive Map",
   "diveLog_listPage_compactTitle": "Dives",
   "diveLog_listPage_errorLoading": "Error: {error}",
+  "diveLog_listPage_bottomSheet_importFromComputer": "Import from Computer",
+  "diveLog_listPage_bottomSheet_logManually": "Log Dive Manually",
+  "diveLog_listPage_fab_addDive": "Add Dive",
   "diveLog_listPage_fab_logDive": "Log Dive",
   "diveLog_listPage_menuAdvancedSearch": "Advanced Search",
   "diveLog_listPage_menuDiveNumbering": "Dive Numbering",
