--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -692,6 +692,7 @@
   "diveComputer_discovery_unknownDeviceDescription": "Cet appareil n'est pas dans notre bibliotheque. Nous tenterons de nous connecter, mais le telechargement pourrait ne pas fonctionner.",
   "diveComputer_downloadStep_andMoreDives": "... et {count} de plus",
   "diveComputer_downloadStep_cancel": "Annuler",
+  "diveComputer_downloadStep_cancelled": "Telechargement annule",
   "diveComputer_downloadStep_depthMeters": "{depth}m",
   "diveComputer_downloadStep_downloadFailed": "Echec du telechargement",
   "diveComputer_downloadStep_downloadedDives": "Plongees telechargees",
@@ -967,6 +968,7 @@
   "diveLog_detail_label_entryMethod": "Methode d'entree",
   "diveLog_detail_label_exit": "Sortie :",
   "diveLog_detail_label_exitMethod": "Methode de sortie",
+  "diveLog_detail_label_firmwareVersion": "Version du firmware",
   "diveLog_detail_label_gradientFactors": "Facteurs de gradient",
   "diveLog_detail_label_height": "Hauteur",
   "diveLog_detail_label_highTide": "Maree haute",
@@ -974,6 +976,7 @@
   "diveLog_detail_label_ppO2AtPoint": "ppO₂ au point selectionne :",
   "diveLog_detail_label_rateOfChange": "Taux de variation",
   "diveLog_detail_label_sacRate": "Consommation SAC",
+  "diveLog_detail_label_serialNumber": "Numero de serie",
   "diveLog_detail_label_state": "Etat",
   "diveLog_detail_label_surfaceInterval": "Intervalle de surface",
   "diveLog_detail_label_surfacePressure": "Pression de surface",
@@ -1233,8 +1236,11 @@
   "diveLog_legend_label_temp": "Temp",
   "diveLog_legend_label_tts": "TTS",
   "diveLog_listPage_appBar_diveMap": "Carte des plongees",
+  "diveLog_listPage_bottomSheet_importFromComputer": "Importer depuis l'ordinateur",
+  "diveLog_listPage_bottomSheet_logManually": "Enregistrer manuellement",
   "diveLog_listPage_compactTitle": "Plongees",
   "diveLog_listPage_errorLoading": "Erreur : {error}",
+  "diveLog_listPage_fab_addDive": "Ajouter une plongee",
   "diveLog_listPage_fab_logDive": "Enregistrer",
   "diveLog_listPage_menuAdvancedSearch": "Recherche avancee",
   "diveLog_listPage_menuDiveNumbering": "Numerotation des plongees",
@@ -2844,22 +2850,22 @@
   "settings_about_version": "Version {version} ({buildNumber})",
   "settings_appBar_title": "Reglages",
   "settings_appearance_appLanguage": "Langue de l'application",
-  "settings_appearance_depthColoredCards": "Cartes de plongee colorees par profondeur",
-  "settings_appearance_depthColoredCards_subtitle": "Afficher les cartes de plongee avec des fonds colores selon la profondeur",
   "settings_appearance_cardColorAttribute": "Colorer les cartes par",
-  "settings_appearance_cardColorAttribute_subtitle": "Choisir quel attribut determine la couleur de fond des cartes",
-  "settings_appearance_cardColorAttribute_none": "Aucun",
   "settings_appearance_cardColorAttribute_depth": "Profondeur",
   "settings_appearance_cardColorAttribute_duration": "Duree",
+  "settings_appearance_cardColorAttribute_none": "Aucun",
+  "settings_appearance_cardColorAttribute_subtitle": "Choisir quel attribut determine la couleur de fond des cartes",
   "settings_appearance_cardColorAttribute_temperature": "Temperature",
   "settings_appearance_colorGradient": "Degrade de couleur",
-  "settings_appearance_colorGradient_subtitle": "Choisir la gamme de couleurs pour les fonds de cartes",
-  "settings_appearance_colorGradient_ocean": "Ocean",
-  "settings_appearance_colorGradient_thermal": "Thermal",
-  "settings_appearance_colorGradient_sunset": "Coucher de soleil",
+  "settings_appearance_colorGradient_custom": "Personnalise",
   "settings_appearance_colorGradient_forest": "Foret",
   "settings_appearance_colorGradient_monochrome": "Monochrome",
-  "settings_appearance_colorGradient_custom": "Personnalise",
+  "settings_appearance_colorGradient_ocean": "Ocean",
+  "settings_appearance_colorGradient_subtitle": "Choisir la gamme de couleurs pour les fonds de cartes",
+  "settings_appearance_colorGradient_sunset": "Coucher de soleil",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_depthColoredCards": "Cartes de plongee colorees par profondeur",
+  "settings_appearance_depthColoredCards_subtitle": "Afficher les cartes de plongee avec des fonds colores selon la profondeur",
   "settings_appearance_gasSwitchMarkers": "Marqueurs de changement de gaz",
   "settings_appearance_gasSwitchMarkers_subtitle": "Afficher les marqueurs de changement de gaz",
   "settings_appearance_header_diveLog": "Carnet de plongee",
