--- a/lib/l10n/arb/app_nl.arb
+++ b/lib/l10n/arb/app_nl.arb
@@ -1,6 +1,6 @@
 {
-  "@@locale": "nl",
   "@@last_modified": "2026-02-10",
+  "@@locale": "nl",
   "accessibility_dialog_keyboardShortcutsTitle": "Sneltoetsen",
   "accessibility_keyLabel_backspace": "Backspace",
   "accessibility_keyLabel_delete": "Delete",
@@ -692,6 +692,7 @@
   "diveComputer_discovery_unknownDeviceDescription": "Dit apparaat staat niet in onze bibliotheek. We proberen verbinding te maken, maar downloaden werkt mogelijk niet.",
   "diveComputer_downloadStep_andMoreDives": "... en nog {count} meer",
   "diveComputer_downloadStep_cancel": "Annuleren",
+  "diveComputer_downloadStep_cancelled": "Download geannuleerd",
   "diveComputer_downloadStep_depthMeters": "{depth}m",
   "diveComputer_downloadStep_downloadFailed": "Download mislukt",
   "diveComputer_downloadStep_downloadedDives": "Gedownloade duiken",
@@ -967,6 +968,7 @@
   "diveLog_detail_label_entryMethod": "Instapmethode",
   "diveLog_detail_label_exit": "Uitstap:",
   "diveLog_detail_label_exitMethod": "Uitstapmethode",
+  "diveLog_detail_label_firmwareVersion": "Firmwareversie",
   "diveLog_detail_label_gradientFactors": "Gradientfactoren",
   "diveLog_detail_label_height": "Hoogte",
   "diveLog_detail_label_highTide": "Hoog water",
@@ -974,6 +976,7 @@
   "diveLog_detail_label_ppO2AtPoint": "ppO₂ op geselecteerd punt:",
   "diveLog_detail_label_rateOfChange": "Wijzigingssnelheid",
   "diveLog_detail_label_sacRate": "SAC-verbruik",
+  "diveLog_detail_label_serialNumber": "Serienummer",
   "diveLog_detail_label_state": "Status",
   "diveLog_detail_label_surfaceInterval": "Oppervlakte-interval",
   "diveLog_detail_label_surfacePressure": "Oppervlaktedruk",
@@ -1233,8 +1236,11 @@
   "diveLog_legend_label_temp": "Temp",
   "diveLog_legend_label_tts": "TTS",
   "diveLog_listPage_appBar_diveMap": "Duikkaart",
+  "diveLog_listPage_bottomSheet_importFromComputer": "Importeren van duikcomputer",
+  "diveLog_listPage_bottomSheet_logManually": "Duik handmatig loggen",
   "diveLog_listPage_compactTitle": "Duiken",
   "diveLog_listPage_errorLoading": "Fout: {error}",
+  "diveLog_listPage_fab_addDive": "Duik toevoegen",
   "diveLog_listPage_fab_logDive": "Duik loggen",
   "diveLog_listPage_menuAdvancedSearch": "Geavanceerd zoeken",
   "diveLog_listPage_menuDiveNumbering": "Duiknummering",
@@ -2844,22 +2850,22 @@
   "settings_about_version": "Versie {version} ({buildNumber})",
   "settings_appBar_title": "Instellingen",
   "settings_appearance_appLanguage": "App-taal",
-  "settings_appearance_depthColoredCards": "Dieptegekleurde duikkaarten",
-  "settings_appearance_depthColoredCards_subtitle": "Toon duikkaarten met oceaangekleurde achtergronden op basis van diepte",
   "settings_appearance_cardColorAttribute": "Kaarten kleuren op",
-  "settings_appearance_cardColorAttribute_subtitle": "Kies welk attribuut de achtergrondkleur van kaarten bepaalt",
-  "settings_appearance_cardColorAttribute_none": "Geen",
   "settings_appearance_cardColorAttribute_depth": "Diepte",
   "settings_appearance_cardColorAttribute_duration": "Duur",
+  "settings_appearance_cardColorAttribute_none": "Geen",
+  "settings_appearance_cardColorAttribute_subtitle": "Kies welk attribuut de achtergrondkleur van kaarten bepaalt",
   "settings_appearance_cardColorAttribute_temperature": "Temperatuur",
   "settings_appearance_colorGradient": "Kleurverloop",
-  "settings_appearance_colorGradient_subtitle": "Kies het kleurbereik voor kaartachtergronden",
-  "settings_appearance_colorGradient_ocean": "Oceaan",
-  "settings_appearance_colorGradient_thermal": "Thermal",
-  "settings_appearance_colorGradient_sunset": "Zonsondergang",
+  "settings_appearance_colorGradient_custom": "Aangepast",
   "settings_appearance_colorGradient_forest": "Bos",
   "settings_appearance_colorGradient_monochrome": "Monochroom",
-  "settings_appearance_colorGradient_custom": "Aangepast",
+  "settings_appearance_colorGradient_ocean": "Oceaan",
+  "settings_appearance_colorGradient_subtitle": "Kies het kleurbereik voor kaartachtergronden",
+  "settings_appearance_colorGradient_sunset": "Zonsondergang",
+  "settings_appearance_colorGradient_thermal": "Thermal",
+  "settings_appearance_depthColoredCards": "Dieptegekleurde duikkaarten",
+  "settings_appearance_depthColoredCards_subtitle": "Toon duikkaarten met oceaangekleurde achtergronden op basis van diepte",
   "settings_appearance_gasSwitchMarkers": "Gaswisselmarkeringen",
   "settings_appearance_gasSwitchMarkers_subtitle": "Toon markeringen voor gaswisselingen",
   "settings_appearance_header_diveLog": "Duiklogboek",
